; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7606_par.c_ad7606_par8_read_block.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7606_par.c_ad7606_par8_read_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.iio_dev = type { i32 }
%struct.ad7606_state = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i8*)* @ad7606_par8_read_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad7606_par8_read_block(%struct.device* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.ad7606_state*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.iio_dev* @dev_get_drvdata(%struct.device* %9)
  store %struct.iio_dev* %10, %struct.iio_dev** %7, align 8
  %11 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %12 = call %struct.ad7606_state* @iio_priv(%struct.iio_dev* %11)
  store %struct.ad7606_state* %12, %struct.ad7606_state** %8, align 8
  %13 = load %struct.ad7606_state*, %struct.ad7606_state** %8, align 8
  %14 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* %5, align 4
  %18 = mul nsw i32 %17, 2
  %19 = call i32 @insb(i64 %15, i8* %16, i32 %18)
  ret i32 0
}

declare dso_local %struct.iio_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.ad7606_state* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @insb(i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
